--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html{
     font-family: 'Open Sans', sans-serif;
 }
 .container{
-    max-width: 900px;
+    max-width: 950px;
     margin: 0 auto;
     width: 100%;
 }
@@ -23,7 +23,20 @@ html{
 
 .flex-container{
     display: flex;
-    flex-wrap: wrap;
+}
+.color-gray{
+    color: lightgrey;
+}
+
+.button{
+    background-color: #3061FF;
+    color: white;
+    padding: 4px 8px; 
+    text-decoration: none;
+}
+hr{
+    width: 50px;
+    color: lightgray;
 }
 
 
@@ -52,12 +65,14 @@ html{
    padding: 4px 8px; 
  }
 
-.header-container-right ul li:last-child a{
+ .header-container ul li .button{
     background-color: #3061FF;
     color: white;
-} 
+    padding: 4px 10px; 
+}
+
 /* -----------------MAIN RULE----------------- */
-                /* SECTION 1 JUMBO */
+/* ---------SECTION 1 JUMBO---------- */
 .section-1-jumbo{
     background-color: #B4D0E7;
 }
@@ -92,6 +107,48 @@ html{
     display: inline-block
 }
 
+/* ------SECTION 2-------  */
+/* SECTION 2 TOP */
+.section-2 h2{
+    margin-top: 60px;
+    margin-bottom: 40px;
+}
+
+.section-2 div label{
+    margin-right: 25px;
+}
+
+.section-2 div .radio-container{
+    margin-bottom: 25px;
+}
+
+.row-2-section-2 > div{
+    width: calc((100%/3) - 20px);
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+/* SECTION 2 CENTER */
+.row-2-section-2 *{
+    margin-bottom: 5px;
+}
+
+.colum-1-section-2, .colum-2-section-2, .colum-3-section-2 {
+    border: 2px solid lightgray;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.type-of-user{
+    text-align: center;
+    border-bottom: 2px solid lightgray;
+    padding: 5px 0;
+}
+
+.section-2 ul, .section-2 li{
+    margin-left: 15px;
+}
+
+/* SECTION 2 BOTTOM */
 
 /* -----------------FOOTER RULE----------------- */
 
@@ -110,3 +167,7 @@ html{
 /* .debug .section-1-jumbo *{
     border: 1px dashed red;
 } */
+
+/* .debug .section-2 *{
+    border: 1px dashed red;
+}  */
