--- a/css/style.css
+++ b/css/style.css
@@ -145,10 +145,11 @@ main ul li::before {
     margin-bottom: 25px;
 }
 
+.row-2-section-2{
+   justify-content: space-between;
+}
 .row-2-section-2 > div{
-    width: calc((100%/3) - 20px);
-    margin-right: 10px;
-    margin-left: 10px;
+    width: 30%;
 }
 
 /* SECTION 2 CENTER */
