--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,64 @@ main ul li::before {
 
 
 /* SECTION 2 BOTTOM */
+.row-3-section-2{
+    margin-top: 40px;
+    min-height: 30px;
+    border: 2px solid lightgray;
+}
+.top-row-3-section-2{
+    min-height: 30px;
+    border-bottom: 2px solid lightgray;
+    text-align: center;
+    padding: 8px 0;
+}
+
+.col-1{
+    width: 70%;
+    padding: 20px;
+}
+.col-2{
+    width: 30%;
+    padding:20px;
+}
+
+.col-1 h4, .col-1 h5{
+    margin-bottom: 20px;
+}
+.col-1 p{
+    margin-top: 40px;
+}
+
+
+/* -------section 3------- */
+.section-3{
+    margin-top: 100px;
+}
+.section-3 .col-1{
+    width: 60%;
+    padding: 20px 0;
+}
+.section-3 .col-2{
+    width: 40%;
+    padding:20px 0;
+    padding-left: 20px;
+}
+
+.section-3 .col-1 img{
+    width: 100%;
+}
+.section-3 .col-2 h4{
+    margin-bottom: 20px;
+}
+.section-3 .col-2 p{
+    margin-bottom: 40px;
+}
+.link-partner{
+    border: 1px solid black;
+    color: black;
+    padding: 4px 8px;         
+    text-decoration: none;
+}
 
 /* -----------------FOOTER RULE----------------- */
 
