--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,15 @@ hr{
     width: 50px;
     color: lightgray;
 }
+h2{
+    margin-top: 60px;
+    margin-bottom: 40px;
+    font-size: 2em;
+}
+
+img{
+    width: 100%;
+}
 
 
 /* -----------------HEADER RULE----------------- */
@@ -131,11 +140,7 @@ main ul li::before {
 .section-2{
     margin-top: 100px;
 }
-.section-2 h2{
-    margin-top: 60px;
-    margin-bottom: 40px;
-    font-size: 2em;
-}
+
 
 .section-2 div label{
     margin-right: 25px;
@@ -213,7 +218,8 @@ main ul li::before {
 }
 .section-3 .col-2{
     width: 40%;
-    padding:20px 0;
+    padding-top:80px;
+    padding-bottom:20px;
     padding-left: 20px;
 }
 
@@ -221,6 +227,7 @@ main ul li::before {
     width: 100%;
 }
 .section-3 .col-2 h4{
+    font-size: 1.4em;
     margin-bottom: 20px;
 }
 .section-3 .col-2 p{
@@ -232,6 +239,28 @@ main ul li::before {
     padding: 4px 8px;         
     text-decoration: none;
 }
+
+/* ----------section 4---------- */
+.container-cards{
+    flex-wrap: wrap;
+    justify-content: space-between;
+ }
+ .container-cards > div{
+    width: 30%;
+    margin-top: 20px;
+ }
+
+ .section-4 h3{
+    margin-bottom: 20px;
+ }
+
+ /* -------section 5-------- */
+.title-section-5{
+    max-width: 60%;
+}
+
+/* --------section 6------- */
+
 
 /* -----------------FOOTER RULE----------------- */
 
