--- a/css/style.css
+++ b/css/style.css
@@ -346,7 +346,24 @@ main ul li::before {
     margin-bottom: 60px;
     margin-left: 60px;
 }
+/* -------SECTION 8------ */
+.section-8{
+    margin-top: 80px;
+}
+.section-8 h3{
+    font-size: 1.8em;
+    margin-bottom: 50px;
+}
+.section-8 hr{
+    width: 100%;
+    border-color: lightgray;
+}
 
+.ask{
+    justify-content: space-between;
+    margin: 30px 0;
+    padding-right: 20px;
+}
 
 /* -----------------FOOTER RULE----------------- */
 
