--- a/css/style.css
+++ b/css/style.css
@@ -366,8 +366,45 @@ main ul li::before {
 }
 
 /* -----------------FOOTER RULE----------------- */
+footer{
+    background-color: black;
+    color: white;
+    min-height: 90px;
+    padding-top: 60px;
+    padding-bottom: 60px;
 
+}
+footer > div{
+   justify-content: space-between;
+}
 
+footer .container > div{
+    width: 18%;
+}
+
+footer h3{
+    margin-bottom: 20px;
+}
+
+footer ul li{
+    list-style: none;
+    margin-bottom: 8px;
+}
+
+footer ul li a{
+    color: white;
+    text-decoration: none;
+}
+
+.link-footer{
+    margin-bottom: 50px;
+}
+footer hr{
+    margin-bottom: 30px;
+}
+.language{
+    color: lightgrey;
+}
 
 /* -----------------DEBUG----------------- */
 /* .debug .container {
