--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ img{
     margin-top: 3px;
     margin-left: 8px;
     flex-direction: column;
-    background-color: rgba(10, 10, 10, 0.5);
+    background-color: rgba(181, 180, 180, 0.6);
     display: none;
     text-align: start;
 }
@@ -402,6 +402,14 @@ main ul li::before {
     padding-right: 20px;
 }
 
+.show-faq{
+    margin-top: 5px;
+    background-color: rgba(100, 100, 100, 0.2);
+    display: none;
+}
+.hover-container:hover .show-faq{
+    display: inline-block;
+}
 /* -----------------FOOTER RULE----------------- */
 footer{
     background-color: black;
